fix(api): warm the cache in ascending popularity, only as much as it can hold
getWarmupTargets 가 Collectors.toMap 으로 HashMap 을 만들어 getTopPageIds 의 인기
순서를 버리고 있었다. LinkedHashMap 으로 바꿔 순서를 지켰더니 테스트가 떨어졌다 —
순서를 지키니 오히려 결정적으로 최악이 됐다. 인기 내림차순으로 넣으면 가장 인기
있는 페이지가 가장 먼저 들어가고, LRU 는 가장 먼저 들어간 것부터 버린다. maxSize 에
걸리는 순간 가장 인기 있는 것이 나갔다.

LRU 는 인기를 모른다. 예열 중에는 조회가 없으니 "마지막으로 만진 시각 = 넣은 시각"
뿐이고, LRU 는 그 정보로 정확히 동작한 것이다. 인기를 아는 쪽은 예열이다. 그래서
예열이 두 가지를 한다. 인기 오름차순으로 넣어 가장 인기 있는 것을 가장 최근으로
만든다 — 예열 직후 LRU 순서가 인기 순서가 되어 첫 미스에서 가장 인기 없는 것이
나간다. 그리고 캐시가 담을 수 있는 만큼만 가져온다 — 넘게 가져오면 DB 에서 읽어 바로
버린다. 앞은 정확성, 뒤는 효율이다.

역순 삽입은 LRU 구현을 역이용하는 게 아니다. "가장 최근에 쓴 것이 가장 늦게 나간다"
는 LRU 의 계약 그 자체라 구현이 바뀌어도 성립한다. 뒤집는 자리는 warmup 이다 —
getTopPageIds 는 "가장 많이 불린 N개" 라는 뜻을 유지하고, LRU 사정은 캐시에 넣는
쪽이 안다.

warmupStore 의 null 계약을 "금지" 로 확정했다. PageCacheStore 는 null 을 방어하고
SpatialCacheEngine 은 안 하고 있었다. 빌더가 warmupFile 을 필수로 검사하므로 운영에서
null 이 올 길이 없고, 2-arg 생성자는 테스트만 썼다. 생성자를 지우고 방어를 지웠다.
테스트는 임시 파일 하나로 대신한다.

테스트 1개 추가. 슬롯 2개에 인기 셋을 예열해 상위 둘만 DB 에서 가져오고, 첫 미스에서
셋째가 아닌 둘째가 나가는지 본다. reverse 를 빼면 P0 가 나가고, LinkedHashMap 을
HashMap 으로 바꾸면 순서가 해시 순이 되고, cap 을 빼면 P2 를 DB 에서 가져와 각각
떨어진다.

테스트를 쓰다 isCached 가 LRU 순서를 바꾼다는 것을 봤다. access-order 에서 get 은
쓰기라 관측이 상태를 바꾼다. 확인하는 행위로 순서를 되돌려 놓아 테스트가 틀린
결론을 냈고, 순서를 안 건드리는 getCacheSize 로 바꿔 풀었다. 별도 항목이다.